# chronometer

./: Cargo.toml  LICENSE  README.md
doc/: crates.js  search-index.js  settings.html  source-files.js
doc/chronometer/: all.html  index.html  sidebar-items.js  struct.Chronometer.html
doc/implementors/core/fmt/: trait.Debug.js  trait.Display.js
doc/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
doc/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
doc/src/chronometer/: lib.rs.html
src/: lib.rs
