[package]
name = "chronometer"
version = "0.1.0"
edition = "2021"
description = "A small stopwatch for rust"
readme = "README.md"
repository = "https://github.com/nowlow/Chronometer"
license = "MIT"
license-file = "LICENSE.txt"
keywords = ["stopwatch", "timer", "time", "chrono"]
categories = ["science"]
authors = ["Naoufel <hello@naoufel.co>"]

[dependencies]
