[package]
name = "chronometer"
version = "0.1.1"
edition = "2021"
description = "A small stopwatch for rust"
readme = "README.md"
repository = "https://github.com/nowlow/Chronometer"
license = "MIT"
license-file = "LICENSE"
keywords = ["stopwatch", "timer", "time", "chrono"]
categories = ["science"]
authors = ["Naoufel <hello@naoufel.co>"]

[dependencies]
